tests/diagnostics/declarations/imports/import_after_declaration/expect.txt
# exit: 1
input/lib.coppice:5:1: error: import declarations must appear before top-level declarations
  import platform/auth { Token }
  ^
